--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Susul-1312/firstSqlProject/issues"
   },
-  "homepage": "https://github.com/Susul-1312/firstSqlProject#readme"
+  "homepage": "https://github.com/Susul-1312/firstSqlProject#readme",
+  "dependencies": {
+    "sqlite3": "^5.0.0"
+  }
 }
